@@ -1,6 +1,7 @@
 a.out
 FvwmTransFocus
 cdiff
+cutcom
 load
 malloc
 quotes
